<resources>
    <string name="app_name">SuapProject</string>
    <string name="usuario">Usuário:</string>
    <string name="senha">Senha:</string>
    <string name="situacao">situacao:</string>
    <string name="matricula">Matrícula:</string>
    <string name="situacaoSistema">Situacao Sistema:</string>
    <string name="campus">Campus:</string>
    <string name="curso">Curso:</string>
    <string name="dadosAluno">Dados do Aluno</string>
    <string name="botao">Acessar</string>
    <string name="botaoNotas">Buscar</string>
    <string name="title_activity_principal">SUAP</string>
    <string name="action_settings">Sair</string>
    <string name="anoLetivo">Ano Letivo</string>
    <string name="periodoLetivo">Período Letivo</string>

    <string name="notaAluno">Notas do Aluno</string>
    <string name="faltaAluno">Faltas do Aluno</string>

    <string name="codTurma">Código da turma</string>
    <string name="alunos">Alunos</string>
    <string name="turmas">Turmas Virtuais</string>
    <string name="copCurri">Componente Curricular</string>
</resources>
